--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,90 +66,53 @@ body {
   font-weight: 300;
 }
 
-/* MultiRage slider styling */
-
-.slider {
-  position: relative;
-  width:250px;
-}
-
-.slider__track,
-.slider__range,
-.slider__left-value,
-.slider__right-value {
+/* Formula Loader classes */
+.loader{
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+    
 }
-
-.slider__track,
-.slider__range {
-  border-radius: 2px;
-  height: 2px;
-}
-
-.slider__track {
-  background-color: #ced4da;
-  width: 100%;
-  z-index: 1;
-}
-
-.slider__range {
-  background-color: #0B0EB5;
-  z-index: 2;
-}
-
-
-/* Removing the default appearance */
-.thumb,
-.thumb::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  -webkit-tap-highlight-color: transparent;
-}
-
-.thumb {
-  pointer-events: none;
-  position: absolute;
-  height: 0;
-  width: 250px;
-  outline: none;
-}
-
-.thumb--zindex-3 {
-  z-index: 3;
-}
-
-.thumb--zindex-4 {
-  z-index: 4;
-}
-
-.thumb--zindex-5 {
-  z-index: 5;
-}
-
-/* For Chrome browsers */
-.thumb::-webkit-slider-thumb {
-  background-color: #0B0EB5;
-  border: none;
+/* Creating the dots */
+span{
+  height: 9px;
+  width: 9px;
+  margin-right: 10px;
   border-radius: 50%;
-  box-shadow: 0 0 1px 1px #000000;
-  cursor: pointer;
-  height: 10px;
-  width: 10px;
-  margin-top: 4px;
-  pointer-events: all;
-  position: relative;
+  background-color: #C2E0E8;
+  animation: loading 1s linear infinite;
 }
-
-/* For Firefox browsers */
-.thumb::-moz-range-thumb {
-  background-color: #0B0EB5;
-  border: none;
-  border-radius: 50%;
-  box-shadow: 0 0 1px 1px #000000;
-  cursor: pointer;
-  height: 10px;
-  width: 10px;
-  margin-top: 4px;
-  pointer-events: all;
-  position: relative;
+/* Creating the loading animation*/
+@keyframes loading {
+  0%{
+   transform: translateX(0);
+  }
+  25%{
+   transform: translateX(15px);
+  }
+  50%{
+   transform: translateX(-15px);
+  }
+  100%{
+   transform: translateX(0);
+  }
+    
 }
-
+span:nth-child(1){
+ animation-delay: 0.1s;
+}
+span:nth-child(2){
+ animation-delay: 0.2s;
+}
+span:nth-child(3){
+ animation-delay: 0.3s;
+}
+span:nth-child(4){
+ animation-delay: 0.4s;
+}
+span:nth-child(5){
+ animation-delay: 0.5s;
+}
