--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,6 +6,7 @@
 @layer base {
   h1 {
     font-weight: 700;
+    font-family: Inter;
     letter-spacing: -3%;
     font-size: 64px;
     line-height: 70px;
@@ -14,6 +14,7 @@
   
   h2{
     font-weight: 700;
+    font-family: Inter;
     letter-spacing: -2%;
     font-size: 40px;
     line-height: 48px;
@@ -21,6 +22,7 @@
 
   h3 {
     font-weight: 400;
+    font-family: Inter;
     letter-spacing: -2%;
     font-size: 32px;
     line-height: 38px;
@@ -28,6 +30,7 @@
 
   h4 {
     font-weight: 400;
+    font-family: Inter;
     letter-spacing: -2%;
     font-size: 24px;
     line-height: 30px;
@@ -35,6 +38,7 @@
 
   h5 {
     font-weight: 500;
+    font-family: Inter;
     letter-spacing: -2%;
     font-size: 20px;
     line-height: 24px;
@@ -42,6 +46,7 @@
 
   h6 {
     font-weight: 400;
+    font-family: Inter;
     letter-spacing: -2%;
     font-size: 16px;
     line-height: 22px;
