--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,6 +79,7 @@ body {
   transform: translate(-50%, -50%);
   display: flex;
   align-items: center;
+  z-index: 100;
     
 }
 /* Creating the dots */
