--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-        
 
 @layer base {
   h1 {
@@ -11,8 +10,8 @@
     font-size: 64px;
     line-height: 70px;
   }
-  
-  h2{
+
+  h2 {
     font-weight: 700;
     font-family: Inter;
     letter-spacing: -2%;
@@ -51,7 +50,6 @@
     font-size: 16px;
     line-height: 22px;
   }
-
 }
 
 * {
@@ -60,19 +58,19 @@
   margin: 0;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 300;
 }
 
 /* Formula Loader classes */
-.loader{
+.loader {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -80,45 +78,43 @@ body {
   display: flex;
   align-items: center;
   z-index: 100px;
-    
 }
 /* Creating the dots */
-.dot{
+.dot {
   height: 9px;
   width: 9px;
   margin-right: 10px;
   border-radius: 50%;
-  background-color: #C2E0E8;
+  background-color: #c2e0e8;
   animation: loading 1s linear infinite;
 }
 /* Creating the loading animation*/
 @keyframes loading {
-  0%{
-   transform: translateX(0);
+  0% {
+    transform: translateX(0);
   }
-  25%{
-   transform: translateX(15px);
+  25% {
+    transform: translateX(15px);
   }
-  50%{
-   transform: translateX(-15px);
+  50% {
+    transform: translateX(-15px);
   }
-  100%{
-   transform: translateX(0);
+  100% {
+    transform: translateX(0);
   }
-    
 }
-span:nth-child(1){
- animation-delay: 0.1s;
+span:nth-child(1) {
+  animation-delay: 0.1s;
 }
-span:nth-child(2){
- animation-delay: 0.2s;
+span:nth-child(2) {
+  animation-delay: 0.2s;
 }
-span:nth-child(3){
- animation-delay: 0.3s;
+span:nth-child(3) {
+  animation-delay: 0.3s;
 }
-span:nth-child(4){
- animation-delay: 0.4s;
+span:nth-child(4) {
+  animation-delay: 0.4s;
 }
-span:nth-child(5){
- animation-delay: 0.5s;
+span:nth-child(5) {
+  animation-delay: 0.5s;
 }
