--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Inter";
+  src: url("/public/fonts/Inter-Regular.ttf") format("truetype");
+}
+
+
 @layer base {
   h1 {
     font-weight: 700;
@@ -65,9 +71,14 @@ html {
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-serif !important;
   font-weight: 300;
 }
+
+body {
+  font-family: "Inter", sans-serif;
+}
+
 
 /* Formula Loader classes */
 .loader {
@@ -118,3 +129,5 @@ span:nth-child(4) {
 span:nth-child(5) {
   animation-delay: 0.5s;
 }
+
+
