--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
   h1 {
     font-weight: 700;
@@ -59,13 +58,11 @@
   margin: 0;
 }
 
-
 html {
   font-family: "Inter", sans-serif;
 }
 
-
- html {
+html {
   scroll-behavior: smooth;
 }
 
@@ -75,8 +72,6 @@ body {
   font-family: "Inter", sans-serif;
   font-weight: 300;
 }
-
-
 
 /* Formula Loader classes */
 .loader {
@@ -128,4 +123,51 @@ span:nth-child(5) {
   animation-delay: 0.5s;
 }
 
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #8cbbc9;
+  margin: 0 10px;
+  animation: pulse 1s infinite alternate;
+}
+
+.dot.active {
+  background-color: #7bac32;
+  animation: pulse 1s infinite;
+  transform: scale(1.5);
+}
+
+.dot:nth-child(2) {
+  animation-delay: 200ms;
+}
+
+.dot:nth-child(3) {
+  animation-delay: 400ms;
+}
+
+.dot:nth-child(4) {
+  animation-delay: 600ms;
+}
+
+.dot:nth-child(5) {
+  animation-delay: 800ms;
+}
+
+@keyframes pulse {
+  from {
+    background-color: #8cbbc9;
+    transform: scale(1);
+  }
+
+  to {
+    background-color: #7bac32;
+    transform: scale(1.5);
+  }
+}
