--- a/styles/globals.css
+++ b/styles/globals.css
@@ -175,3 +175,19 @@ span:nth-child(5) {
     transform: scale(1.5);
   }
 }
+
+.elementToFadeInAndOut {
+  opacity: 1;
+  animation: fade 2s infinite;
+}
+@keyframes fade {
+  0% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
